syntax = "proto3";

package def.constants;

option java_package = "com.game.matching.proto";
option java_outer_classname = "NotifyOpcodeDef";
option java_multiple_files = true;

enum OPCODE {
    NOTIFY_MATCH_SUCCESS = 0;
}